# dataengineering_toolbox

./: README.md  pyproject.toml
dataengineer_toolbox/: aws3_listobjects.py
docs/: S3_FOLDER.md
